az-cli/aks/ingress-controllers/nginx/internal/01-app01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app01
  template:
    metadata:
      labels:
        app: app01
    spec:
      containers:
      - name: app01
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app01
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: app01
